--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,24 @@
 #####################################
+Changes in version 0.56.3 3/15/2021  wd5m
+
+Enhancements:
+1. Change to sort and display talking (->) indicator on the EchoLink
+client user node listing.
+2. Add Debian directory and bootstrap.sh file name in configure.in
+so they are included in "make dist" tar file.
+3. Add tlbevent.sh script to scripts/Makefile.am for "make dist".
+
+#####################################
+Changes in version 0.56.1 3/10/2021  wd5m
+
+Bug Fixes:
+1. Corrected minor typo in LOG_ERR statement for SFBind2IP
+in src/conference.c.
+
+Enhancements
+1. Modified CmdStats() to display overall statistics similar to LogStats
+
+#####################################
 Changes in version 0.56 2/06/2021  wd5m
 
 Bug Fixes:
