--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 #####################################
+Changes in version 0.56.4 3/20/2021  wd5m
+
+Bug Fixes:
+1. Corrected int bLogCmd to be extern int bLogCmd and placed in
+src/conference.h as it is shared between nodes.cpp and conference.c
+now. Changes linkbox/nodes.cpp, src/conference.c and src/conference.h.
+This should resolve issues with some compilers. 
+
+#####################################
 Changes in version 0.56.3 3/15/2021  wd5m
 
 Enhancements:
