--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,23 @@
 
 #####################################
+Changes in version 0.57 3/28/2022  wd5m
+
+Enhancements:
+1. Add COS event to fire when nodes begin or stop transmitting (talking).
+Event: COS <callsign> [ <active> | <inactive> ]
+
+Fixes:
+Require ActiveSources > 0 to set "bRxActive = TRUE" in getRxAudio. This 
+resolves an issue where COS would revert to active state when a few 
+audio sample packets remain after a station stops transmitting.
+
+#####################################
 Changes in version 0.57 1/31/2022  wd5m
 
 Enhancements:
 1. Add pause on silence feature to .tonegen FILE commands. New 
 configuration variables SilentThreshold and SilentThresholdTime allow
-detecting silence in an audil file and pausing to remove silence
+detecting silence in an audio file and pausing to remove silence
 and stop transmitting up to minPlayBackPause seconds. See 
 tbd.conf.sample for addtional setting details. When running tlb
 with debug enabled, e.g. tlb -d, and SilentThresholdTime enabled
